[gd_scene load_steps=7 format=2]

[ext_resource path="res://libs/menus/screens/_simple_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/assets/fonts/thaleah-fat-64.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/assets/fonts/thaleah-fat-48.tres" type="DynamicFont" id=3]
[ext_resource path="res://libs/menus/main-theme.tres" type="Theme" id=4]
[ext_resource path="res://menus/screens/settings_screen/settings_screen.gd" type="Script" id=5]
[ext_resource path="res://menus/assets/sfx/menus_sfx.tscn" type="PackedScene" id=6]

[node name="SettingsScreen" instance=ExtResource( 1 )]
margin_left = 3.34094
margin_top = -0.39093
margin_right = 3.34094
margin_bottom = -0.39093
script = ExtResource( 5 )

[node name="vbox" parent="." index="0"]
margin_left = -239.0
margin_top = -233.5
margin_right = 239.0
margin_bottom = 233.5

[node name="hbox" parent="vbox" index="0"]
margin_right = 478.0
margin_bottom = 467.0

[node name="vbox" parent="vbox/hbox" index="0"]
margin_right = 478.0
margin_bottom = 467.0
custom_constants/separation = 125
alignment = 1

[node name="title" type="Label" parent="vbox/hbox/vbox" index="0"]
margin_right = 478.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="options" type="VBoxContainer" parent="vbox/hbox/vbox" index="1"]
margin_top = 184.0
margin_right = 478.0
margin_bottom = 467.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="music" type="HBoxContainer" parent="vbox/hbox/vbox/options" index="0"]
margin_top = 57.0
margin_right = 478.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="label" type="Label" parent="vbox/hbox/vbox/options/music" index="0"]
margin_right = 228.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Music (100)"
__meta__ = {
"_edit_lock_": true
}

[node name="center" type="VBoxContainer" parent="vbox/hbox/vbox/options/music" index="1"]
margin_left = 278.0
margin_right = 478.0
margin_bottom = 44.0
size_flags_horizontal = 0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="music_volume" type="HScrollBar" parent="vbox/hbox/vbox/options/music/center" index="0"]
margin_top = 16.0
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
theme = ExtResource( 4 )
value = 50.0
__meta__ = {
"_edit_lock_": true
}

[node name="sound" type="HBoxContainer" parent="vbox/hbox/vbox/options" index="1"]
margin_top = 116.0
margin_right = 478.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="label" type="Label" parent="vbox/hbox/vbox/options/sound" index="0"]
margin_right = 228.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Sound (100)"
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="center" type="VBoxContainer" parent="vbox/hbox/vbox/options/sound" index="1"]
margin_left = 278.0
margin_right = 478.0
margin_bottom = 44.0
size_flags_horizontal = 0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="sound_volume" type="HScrollBar" parent="vbox/hbox/vbox/options/sound/center" index="0"]
margin_top = 16.0
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
value = 50.0
__meta__ = {
"_edit_lock_": true
}

[node name="return" type="Button" parent="vbox/hbox/vbox/options" index="2"]
margin_top = 175.0
margin_right = 478.0
margin_bottom = 225.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.196078, 0.196078, 1 )
text = "Return"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="SFX" parent="." index="1" instance=ExtResource( 6 )]
[connection signal="value_changed" from="vbox/hbox/vbox/options/music/center/music_volume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="vbox/hbox/vbox/options/sound/center/sound_volume" to="." method="_on_sound_volume_value_changed"]
[connection signal="mouse_entered" from="vbox/hbox/vbox/options/return" to="SFX" method="emit_signal" binds= [ "menu_hover" ]]
[connection signal="pressed" from="vbox/hbox/vbox/options/return" to="." method="emit_signal" binds= [ "button_return" ]]
